# nethack

./: .gitignore  CMakeLists.txt  Makefile  README  README-curses.txt  README.Subversion  README.md  sporkhack.nsi  svn-commit.tmp
dat/: .gitignore  Arc-fila.lev  Arc-filb.lev  Arc-goal.lev  Arc-loca.lev  Arc-strt.lev  Arch.des  Bar-fila.lev  Bar-filb.lev  Bar-goal.lev  Bar-loca.lev  Bar-strt.lev  Barb.des  Cav-fila.lev  Cav-filb.lev  Cav-goal.lev  Cav-loca.lev  Cav-strt.lev  Caveman.des  Hea-fila.lev  Hea-filb.lev  Hea-goal.lev  Hea-loca.lev  Hea-strt.lev  Healer.des  Kni-fila.lev  Kni-filb.lev  Kni-goal.lev  Kni-loca.lev  Kni-strt.lev  Knight.des  Makefile  Mon-fila.lev  Mon-filb.lev  Mon-goal.lev  Mon-loca.lev  Mon-strt.lev  Monk.des  Pri-fila.lev  Pri-filb.lev  (+106 more)
doc/: .gitignore  Guidebook.mn  Guidebook.mn.orig  Guidebook.tex  Guidebook.tex.orig  Guidebook.txt  Guidebook.txt.orig  README.convict  README.oprops.md  build-cygwin.md  build-linux.md  build-mingw.md  build-osx.md  changelog.txt  colormap.conf  dgamelaunch.md  save-recovery.md  unnitrohack.txt  window.doc  xlogfile.md
dumbmake/: CMakeLists.txt
include/: #flag.h#  .gitignore  align.h  amiconf.h  artifact.h  artilist.h  beconf.h  color.h  config.h  config.h.orig  config1.h  date.h  decl.h  def_os2.h  display.h  dlb.h  dungeon.h  eshk.h  extern.h  extern.h.orig  flag.h  flag.h.orig  func_tab.h  global.h  hack.h  mac-carbon.h  mac-qt.h  mac-term.h  macconf.h  macpopup.h  mactty.h  macwin.h  mail.h  mkroom.h  monattk.h  mondata.h  monflag.h  monst.h  monsym.h  mttypriv.h  (+41 more)
libnethack/: CMakeLists.txt
libnethack/util/: lev_main.c
libnethack_common/: CMakeLists.txt
libnitrohack/: CMakeLists.txt
libnitrohack/dat/: Arch.des  Barb.des  CMakeLists.txt  Caveman.des  Convict.des  Healer.des  Knight.des  Monk.des  Priest.des  Ranger.des  Rogue.des  Samurai.des  Tourist.des  Valkyrie.des  Wizard.des  advcal.des  bigroom.des  blkmar.des  castle.des  data.base  dragons.des  dungeon.def  endgame.des  gehennom.des  heck.des  history  knox.des  medusa.des  mines.des  nymph.des  oracle.des  quest.txt  rumors.fal  sokoban.des  tower.des  town.des  yendor.des
libnitrohack/include/: align.h  artifact.h  artilist.h  attrib.h  color.h  config.h  coord.h  decl.h  dgn_file.h  display.h  dlb.h  dungeon.h  edog.h  emin.h  engrave.h  epri.h  eshk.h  extern.h  flag.h  global.h  hack.h  lev.h  magic.h  mfndpos.h  mkroom.h  monattk.h  mondata.h  monflag.h  monst.h  monsym.h  monuse.h  ntconf.h  obj.h  objclass.h  patchlevel.h  permonst.h  prop.h  qtext.h  quest.h  rect.h  (+16 more)
libnitrohack/src/: CMakeLists.txt  allmain.c  apply.c  artifact.c  attrib.c  ball.c  bones.c  botl.c  cmd.c  dbridge.c  decl.c  detect.c  dig.c  display.c  dlb.c  do.c  do_name.c  do_wear.c  dog.c  dogmove.c  dokick.c  dothrow.c  drawing.c  dump.c  dungeon.c  eat.c  end.c  engrave.c  exper.c  explode.c  extralev.c  files.c  fountain.c  hack.c  hacklib.c  history.c  invent.c  light.c  lock.c  log.c  (+71 more)
libnitrohack/util/: CMakeLists.txt  dgn_comp.l  dgn_comp.y  dgn_main.c  dlb_main.c  lev_comp.l  lev_comp.y  lev_main.c  makedefs.c  panic.c  saveinfo.c
libnitrohack_client/: CMakeLists.txt
libnitrohack_client/include/: nhclient.h
libnitrohack_client/src/: clientapi.c  connection.c  netcmd.c
libuncursed/: CMakeLists.txt
nethack/: CMakeLists.txt
nitrohack/: CMakeLists.txt
nitrohack/include/: nhcurses.h
nitrohack/src/: boxdraw.c  color.c  dialog.c  gameover.c  getline.c  keymap.c  main.c  map.c  menu.c  messages.c  netgame.c  netplay.c  options.c  outchars.c  playerselect.c  replay.c  rungame.c  sidebar.c  status.c  topten.c  windows.c
nitrohack_server/: CMakeLists.txt  nhserver.conf.example  protocol_specification.txt
nitrohack_server/include/: nhserver.h
nitrohack_server/src/: auth.c  clientcmd.c  clientmain.c  config.c  db_pgsql.c  kill.c  log.c  miscsetup.c  server.c  srvmain.c  winprocs.c
src/: #display.c#  .gitignore  Makefile  allmain.c  alloc.c  apply.c  artifact.c  attrib.c  avl.c  ball.c  bones.c  botl.c  cmd.c  dbridge.c  decl.c  detect.c  dig.c  display.c  dlb.c  do.c  do_name.c  do_wear.c  dog.c  dogmove.c  dokick.c  dothrow.c  drawing.c  dungeon.c  eat.c  end.c  engrave.c  exper.c  explode.c  extralev.c  files.c  fountain.c  hack.c  hacklib.c  invent.c  light.c  (+73 more)
src/sfmt/: LICENSE.txt  SFMT-avx2.h  SFMT.c  SFMT.h
sys/amiga/: Makefile.agc  Makefile.ami  amidos.c  amidos.p  amigst.c  amimenu.c  amirip.c  amisnd.c  amistack.c  amitty.c  amiwind.c  amiwind.p  cvtsnd.c  txt2iff.c  winami.c  winami.p  winchar.c  windefs.h  winext.h  winfuncs.c  winkey.c  winmenu.c  winproto.h  winreq.c  winstr.c  xpm2iff.c
sys/atari/: tos.c
sys/autoconf/: Makefile.src
sys/be/: bemain.c
sys/mac/: Files.r  NHDeflts  dprintf.c  maccurs.c  macerrs.c  macfile.c  macmain.c  macmenu.c  macsnd.c  mactopl.c  mactty.c  macunix.c  macwin.c  mgetline.c  mmodal.c  mrecover.c  mttymain.c
sys/msdos/: Install.dos  Makefile.BC  Makefile.GCC  Makefile.MSC  msdos.c  ovlinit.c  pckeys.c  pctiles.c  pctiles.h  pcvideo.h  portio.h  schema1.BC  schema2.BC  schema3.MSC  setup.bat  sound.c  tile2bin.c  video.c  vidtxt.c  vidvga.c
sys/os2/: Makefile.os2  os2.c
sys/share/: Makefile.lib  dgn_lex.c  dgn_yacc.c  ioctl.c  lev_lex.c  lev_yacc.c  nhlan.c  pcmain.c  pcsys.c  pctty.c  pcunix.c  random.c  tclib.c  unixtty.c  uudecode.c
sys/unix/: Makefile.doc  Makefile.src  Makefile.top  Makefile.utl  cpp3.shr  nethack.sh  unixmain.c  unixres.c  unixunix.c
sys/vms/: Makefile.doc  Makefile.src  Makefile.top  Makefile.utl  lev_lex.h  oldcrtl.c  vmsfiles.c  vmsmail.c  vmsmain.c  vmsmisc.c  vmstty.c  vmsunix.c
sys/wince/: bootstrp.mak  cesetup.bat  cesound.c  mhcmd.c  mhmap.c  mhmenu.c  mhmsg.h  mswproc.c  winMS.h
sys/winnt/: .gitignore  (+11 more)
tilesets/: CMakeLists.txt
tilesets/include/: tilecompile.h
tilesets/util/: tilecompile.c  tileset-read.c  tileset-write.c
util/: .gitignore  Makefile  dgn_comp  dgn_comp.l  dgn_comp.y  dgn_main.c  dlb_main.c  lev_comp  lev_comp.l  lev_comp.y  lev_main.c  makedefs  makedefs.c  panic.c  recover  recover.c  rngstream.c  roll.c  tilemap
(+94 files in other folders)
